test/invalid/baseline/no-semicolon.txt
Syntax error at line 5 in no-semicolon.webidl, since `partial interface NoSemicolon`:
enum YouNeedOne {
^ Missing semicolon after interface
